<resources>
    <string name="app_name">Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sample">Sample</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="str_demo">Demo</string>
    <string name="str_rxjava">RxJava</string>
    <string name="str_sample">Sample</string>
    <string name="str_create_operator">Create Operator</string>
    <string name="str_just_operator">Just Operator</string>
    <string name="str_map_operator">Map Operator</string>
    <string name="str_buffer_operator">Buffer Operator</string>
    <string name="str_interval_operator">Interval Operator</string>
    <string name="str_timer_operator">Timer Operator</string>
    <string name="str_from_array_operator">From Array Operator</string>
    <string name="str_from_iterable_operator">From Iterable Operator</string>
    <string name="str_filter_operator">Filter Operator</string>
    <string name="str_flatMap_operator">FlatMap Operator</string>
    <string name="str_distinct_operator">Distinct Operator</string>
    <string name="menu_create_operator">Create Operator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>