<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sample_id"
            android:icon="@drawable/ic_one"
            android:title="@string/menu_sample" />

        <item
            android:id="@+id/create_operator_id"
            android:icon="@drawable/ic_two"
            android:title="@string/menu_create_operator" />

        <item
            android:id="@+id/just_operator_id"
            android:icon="@drawable/ic_three"
            android:title="@string/str_just_operator" />

        <item
            android:id="@+id/interval_operator_id"
            android:icon="@drawable/ic_four"
            android:title="@string/str_interval_operator" />

        <item
            android:id="@+id/timer_operator_id"
            android:icon="@drawable/ic_five"
            android:title="@string/str_timer_operator" />

    </group>
</menu>