<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/sample_id">

    <fragment
        android:id="@+id/sample_id"
        android:name="com.demo.code.ui.sample.SampleFragment"
        android:label="@string/str_sample"
        tools:layout="@layout/fragment_sample" />

    <fragment
        android:id="@+id/create_operator_id"
        android:name="com.demo.code.ui.operators.CreateOperatorFragment"
        android:label="@string/str_create_operator"
        tools:layout="@layout/fragment_operator_create" />

    <fragment
        android:id="@+id/just_operator_id"
        android:name="com.demo.code.ui.operators.JustOperatorFragment"
        android:label="@string/str_just_operator"
        tools:layout="@layout/fragment_operator_just" />

    <fragment
        android:id="@+id/interval_operator_id"
        android:name="com.demo.code.ui.operators.IntervalOperatorFragment"
        android:label="@string/str_interval_operator"
        tools:layout="@layout/fragment_operator_interval" />

    <fragment
        android:id="@+id/timer_operator_id"
        android:name="com.demo.code.ui.operators.TimerOperatorFragment"
        android:label="@string/str_timer_operator"
        tools:layout="@layout/fragment_operator_interval" />

    <fragment
        android:id="@+id/from_array_operator_id"
        android:name="com.demo.code.ui.operators.FromArrayOperator"
        android:label="@string/str_from_array_operator"
        tools:layout="@layout/fragment_operator_from_array" />

    <fragment
        android:id="@+id/from_iterable_operator_id"
        android:name="com.demo.code.ui.operators.FromIterableOperator"
        android:label="@string/str_from_array_operator"
        tools:layout="@layout/fragment_operator_from_iterable" />

</navigation>